complete deckTui class
@SV